--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="contents text-center">
                             <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Descubra <span style="color: rgb(0, 255, 195);">os segredos</span> que os bancos estão <span style="color:rgb(0, 255, 195);">escondendo</span> de você, <span style="color:rgb(0, 255, 195);">PARA LIBERAR O SEU CRÉDITO RAPIDAMENTE</span></h2>
-                            <iframe title="Video Sobre o Metodo Score dos Sonhos" lass="lazy " width="100% " height="100% " id="videoframe " srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{background:#000;height:100%}img{position:absolute;width:100%;top:0;bottom:0;margin:auto}</style>
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe title="Video Sobre o Metodo Score dos Sonhos" lass="lazy " width="100% " height="100% " id="videoframe " srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{background:#000;height:100%}img{position:absolute;width:100%;top:0;bottom:0;margin:auto}</style>
   <a href=https://www.youtube.com/embed/TqbTGCxap9E?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1>
   <img src=./assets/img/cd.webp>
   <img id='playbutton' src='./assets/img/playYT.webp' style='width: 66px; position: absolute; left: 41.5%;'></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen scrolling="no" loading="lazy"
-                                style="background-color: #000"></iframe>
+                                    style="background-color: #000"></iframe>
+                            </div>
                             <div class="header-button wow fadeInUp" data-wow-delay="0.3s">
                                 <!-- IFRAME -->
                                 <!-- <div class="embed-responsive embed-responsive-16by9">
