--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" media="all">
     <!-- Icon -->
-    <link rel="stylesheet" href="assets/fonts/line-icons.css" media="all">
+    <link rel="preload" href="assets/fonts/line-icons.css" media="all">
     <!-- Slicknav -->
     <!-- <link rel="stylesheet" href="assets/css/slicknav.css"> -->
     <!-- Owl carousel -->
