--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="theme-color" content="#1b0052">
-    <meta name="Pagina sobre o produto Score dos Sonhos, informaçoes sobre o metodo, com o combo contendo ebooks, audiobook e planilha a venda.">
+    <meta name="description" content="Pagina sobre o produto Score dos Sonhos, informaçoes sobre o metodo, com o combo contendo ebooks, audiobook e planilha a venda.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Cache-control" content="public, max-age=31536000">
 
