--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-xs-12">
-                    <img src="./assets/img/combo2.webp" width="auto" height="auto" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook" width="" height="">
+                    <img src="./assets/img/combo2.webp" width="270px" height="114px" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook" width="" height="">
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12 active">
                     <div class="table wow" id="active-tb" data-wow-delay="1.2s">
