--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-xs-12">
-                    <img src="./assets/img/combo2.webp" width="270px" height="114px" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook" width="" height="">
+                    <img src="./assets/img/combo2.webp" width="297px" height="297px" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook" width="" height="">
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12 active">
                     <div class="table wow" id="active-tb" data-wow-delay="1.2s">
@@ -524,7 +524,7 @@
         <div class="row ">
           <div class="col-lg-4 col-md-3 col-xs-12 ">
             <div class="footer-logo ">
-              <img src="assets/img/logoNavBar.webp " alt=" Logo Score dos Sonhos " style="width: 50%; height: 50%; ">   
+              <img src="assets/img/logoNavBar.webp " width=" 297px " height=" 114px " alt=" Logo Score dos Sonhos " style="width: 50%; height: 50%; ">   
               <p style="color: white; ">Copyright 2019 - Aquiles Media® Todos os direitos Reservados.</p>  
               <p style="font-size: 13px; ">ESTE SITE NÃO É do FACEBOOK: Este site não faz parte do site do Facebook ou do Facebook Inc. Além disso, este site NÃO é endossado pelo Facebook de nenhuma maneira. FACEBOOK é uma marca comercial independente da FACEBOOK, Inc. A Aquiles Media é uma empresa com o objetivo de ajudar pessoas a obterem resultados financeiros utilizando o poder da informação e conhecimento. Os depoimentos mostrados são negócios e vão variar com base no seu esforço, no conhecimento que você adquirir.</p>
             </div>
