--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar text" style="background-color: #1b0052; color: white; position: relative; padding-top: 0px;">
             <div class="container text-center" style="padding-top: 0.5%;">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <a href="index.html" class="navbar-brand"><img src="assets/img/logoNavBar.webp" alt="logo Metodo Score dos Sonhos" style="width: 40%; height: 30%; align-items: center; margin-top: 2%;"></a>
+                <a href="index.html" class="navbar-brand"><img src="assets/img/logoNavBar.webp" width=" 297px " height=" 114px " alt="logo Metodo Score dos Sonhos" style="width: 40%; height: 30%; align-items: center; margin-top: 2%;"></a>
                 </button>
 
             </div>
