--- a/index.html
+++ b/index.html
@@ -389,12 +389,12 @@
                     <div class="contents text-center">
                         <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Veja o que nossos clientes estão dizendo sobre o <span style="color: rgb(0, 255, 8); text-shadow: 2px 2px black;">Método Score dos Sonhos</span></h2>
                         <!-- IMAGENS WHATSAPP -->
-                        <img src="./assets/img/Depoimento-4.webp" alt="Depoimento 4 Whatsapp" class="lazyload" loading="lazy">
-                        <img src="./assets/img/Depoimento-5.webp" alt="Depoimento 5 Whatsapp" class="lazyload" loading="lazy">
-                        <img src="./assets/img/Depoimento-7.webp" alt="Depoimento 7 Whatsapp" class="lazyload" loading="lazy">
-                        <img src="./assets/img/Depoimento-8.webp" alt="Depoimento 8 Whatsapp" class="lazyload" loading="lazy">
-                        <img src="./assets/img/Depoimento-1.webp" alt="Depoimento 1 Whatsapp" class="lazyload" loading="lazy">
-                        <img src="./assets/img/Depoimento-2.webp" alt="Depoimento 2 Whatsapp" class="lazyload" loading="lazy">
+                        <img src="./assets/img/Depoimento-4.webp" width=" 267px " height=" 542px " alt="Depoimento 4 Whatsapp" class="lazyload" loading="lazy">
+                        <img src="./assets/img/Depoimento-5.webp" width=" 267px " height=" 541px " alt="Depoimento 5 Whatsapp" class="lazyload" loading="lazy">
+                        <img src="./assets/img/Depoimento-7.webp" width=" 350px " height=" 603px " alt="Depoimento 7 Whatsapp" class="lazyload" loading="lazy">
+                        <img src="./assets/img/Depoimento-8.webp" width=" 350px " height=" 606px " alt="Depoimento 8 Whatsapp" class="lazyload" loading="lazy">
+                        <img src="./assets/img/Depoimento-1.webp" width=" 271px " height=" 570px " alt="Depoimento 1 Whatsapp" class="lazyload" loading="lazy">
+                        <img src="./assets/img/Depoimento-2.webp" width=" 267px " height=" 570px " alt="Depoimento 2 Whatsapp" class="lazyload" loading="lazy">
                         <!-- <img src="./assets/img/Depoimento-9.webp" alt="Depoimento 9 Whatsapp"> -->
                         <!-- cwebp -q 50 Depoiemnto-1.png -o  Depoimento-1.webp
                 cwebp -q 50 Depoimento-2.png -o  Depoimento-2.webp
@@ -533,8 +533,8 @@
           </div>
           <div class="col-lg-4 col-md-5 col-xs-12 ">
             <p class="float-right ">Designed and Developed by Aquiles Media</p>
-            <img src="assets/img/loja_protegida.webp " alt="loja protegida " style="width: 80%; " class="lazyload " loading="lazy ">
-            <img src="assets/img/bandeiras-cartoes-credito-739px.webp " alt="bandeiras de cartoes " style="width: 80%; " class="lazyload " loading="lazy "> 
+            <img src="assets/img/loja_protegida.webp " alt="loja protegida " width=" 216px " height=" 127px " style="width: 80%; " class="lazyload " loading="lazy ">
+            <img src="assets/img/bandeiras-cartoes-credito-739px.webp " alt="bandeiras de cartoes " width=" 216px " height=" 71px " style="width: 80%; " class="lazyload " loading="lazy "> 
           </div> 
         </div>
       </div>
