--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             </div>
             <div class="row text-center">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                    <img src="./assets/img/compra-segura.webp" alt="compra segura" class="text-center" style="width: 100%;" class="lazyload" loading="lazy">
+                    <img src="./assets/img/compra-segura.webp" width=" 690px " height=" 99.5px " alt="compra segura" class="text-center" style="width: 100%;" class="lazyload" loading="lazy">
                 </div>
             </div>
         </div>
