--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Main Style -->
     <link rel="stylesheet" href="assets/css/main.css" media="all">
     <!-- Responsive Style -->
-    <link rel="stylesheet" href="assets/css/responsive.css" media="all">
+    <link rel="preload" href="assets/css/responsive.css" media="all">
 
     <link rel="icon" href="./assets/img/SDSICON.png" media="all">
 
