--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#1b0052">
     <meta name="description" content="Pagina sobre o produto Score dos Sonhos, informaçoes sobre o metodo, com o combo contendo ebooks, audiobook e planilha a venda.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="Cache-control" content="public, max-age=31536000">
+    <meta name="Cache-control" content="public, max-age=3600">
+    <!-- <meta http-equiv="Cache-control" content="public, max-age=31536000"> -->
 
 
     <title>Score dos Sonhos</title>
