--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             font-weight: bolder;
         }
     </style>
-    <script src="/assets/js/t202PixelVideoViews.js"></script>
+    <script async src="/assets/js/t202PixelVideoViews.js"></script>
 </head>
 
 <body>
