--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Descubra <span style="color: rgb(0, 255, 195);">os segredos</span> que os bancos estão <span style="color:rgb(0, 255, 195);">escondendo</span> de você, <span style="color:rgb(0, 255, 195);">PARA LIBERAR O SEU CRÉDITO RAPIDAMENTE</span></h2>
                             <div class="embed-responsive embed-responsive-16by9">
                                 <iframe title="Video Sobre o Metodo Score dos Sonhos" lass="lazy " width="100% " height="100% " id="videoframe " srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{background:#000;height:100%}img{position:absolute;width:100%;top:0;bottom:0;margin:auto}</style>
-  <a href=https://www.youtube.com/embed/TqbTGCxap9E?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1>
+  <a href=https://www.youtube.com/embed/TqbTGCxap9E?enablejsapi=1?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1>
   <img src=./assets/img/cd.webp>
   <img id='playbutton' src='./assets/img/playYT.webp' style='width: 66px; position: absolute; left: 41.5%;'></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen scrolling="no" loading="lazy"
                                     style="background-color: #000"></iframe>
@@ -349,7 +349,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-xs-12">
-                    <img src="./assets/img/combo2.webp" width="297px" height="297px" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook" width="" height="">
+                    <img src="./assets/img/combo2.webp" width="486px" heigth="486px" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook">
+                    <p>&#11088; <span style="color: #5e0eff; text-shadow: 0.5px 0.5px black;font-weight: bolder;">Planilha Exclusiva</span> </p>
+                    <!-- <img src="./assets/img/Planilha.webp" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook" width="243px" height="250px"> -->
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12 active">
                     <div class="table wow" id="active-tb" data-wow-delay="1.2s">
