--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Descubra <span style="color: rgb(0, 255, 195);">os segredos</span> que os bancos estão <span style="color:rgb(0, 255, 195);">escondendo</span> de você, <span style="color:rgb(0, 255, 195);">PARA LIBERAR O SEU CRÉDITO RAPIDAMENTE</span></h2>
                             <div class="embed-responsive embed-responsive-16by9">
                                 <iframe title="Video Sobre o Metodo Score dos Sonhos" lass="lazy " width="100% " height="100% " id="videoframe " srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{background:#000;height:100%}img{position:absolute;width:100%;top:0;bottom:0;margin:auto}</style>
-  <a href=https://www.youtube.com/embed/TqbTGCxap9E?enablejsapi=1?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1>
+  <a href=https://www.youtube.com/embed/RKyYUWy_Lvk?enablejsapi=1?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1>
   <img src=./assets/img/cd.webp>
   <img id='playbutton' src='./assets/img/playYT.webp' style='width: 66px; position: absolute; left: 41.5%;'></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen scrolling="no" loading="lazy"
                                     style="background-color: #000"></iframe>
@@ -359,11 +359,11 @@
                             <p class="text-precos">Ebook Método Score dos Sonhos</p>
                             <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$97,00</span></p>
                             <p class="text-precos">Ebook Bônus 1: Sair do SCPC e renegociar Sem Pagar Juros</p>
-                            <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$44,00</span></p>
+                            <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$49,00</span></p>
                             <p class="text-precos">Ebook Bônus 2: 7 fatores que baixam o Score</p>
-                            <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$44,00</span></p>
+                            <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$49,00</span></p>
                             <p class="text-precos">Ebook Bônus 3: Como financiar seu carro</p>
-                            <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$44,00</span></p>
+                            <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$49,00</span></p>
                             <p class="text-precos">AudioBook Score dos Sonhos</p>
                             <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$22,00</span></p>
                             <!-- <p class="text-precos">Planilha Score 900</p>
