--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                             <div class="embed-responsive embed-responsive-16by9">
                                 <iframe title="Video Sobre o Metodo Score dos Sonhos" lass="lazy " width="100% " height="100% " id="videoframe " srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{background:#000;height:100%}img{position:absolute;width:100%;top:0;bottom:0;margin:auto}</style>
   <a href=https://www.youtube.com/embed/RKyYUWy_Lvk?enablejsapi=1?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1>
-  <img src=./assets/img/cd.webp>
-  <img id='playbutton' src='./assets/img/ThumbSDS.webp' style='width: 66px; position: absolute; left: 41.5%;'></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen scrolling="no" loading="lazy"
+  <img src=./assets/img/ThumbSDS.webp>
+  <img id='playbutton' src='./assets/img/playYT.webp' style='width: 66px; position: absolute; left: 41.5%;'></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen scrolling="no" loading="lazy"
                                     style="background-color: #000"></iframe>
                             </div>
                             <div class="header-button wow fadeInUp" data-wow-delay="0.3s">
