--- a/index.html
+++ b/index.html
@@ -54,11 +54,18 @@
             color: rgb(0, 0, 0);
             transform: translateY(-7px);
         }
-        /* @keyframes clickit {
-          0% {opacity: 0}
-          80% {opacity: 0}
-          100% {opacity: 1}
-        } */
+        
+        @keyframes clickit {
+            0% {
+                opacity: 0
+            }
+            80% {
+                opacity: 0
+            }
+            100% {
+                opacity: 1
+            }
+        }
         
         .text-precos {
             font-weight: bolder;
@@ -111,7 +118,7 @@
                   font-weight: 700; margin-top: 3%; margin-bottom: 3%;   text-shadow: 2px 2px #3c3c3c;
 ">Por favor, verifique se o som está ligado! &#128521;</h5>
 
-                                <button type="button" class="btn btn-success btn-lg btn-zap" style="animation: clickit 12.0s;"><a href="/" style="text-decoration: none; color: white; ">SIM, QUERO AUMENTAR MEU SCORE</a></button>
+                                <button type="button" class="btn btn-success btn-lg btn-zap" style="animation: clickit 12.0s;"><a href="/" style="text-decoration: none; color: white; ">SIM, QUERO AUMENTAR MEU SCORE <br> Liberar meu acesso</a></button>
                                 <br>
 
                             </div>
