--- a/index.html
+++ b/index.html
@@ -72,6 +72,39 @@
         }
     </style>
     <script async src="/assets/js/t202PixelVideoViews.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Ads: 390977414 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-390977414"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-390977414');
+    </script>
+    <!-- Event snippet for Leads no Site - Sem Valor conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+    <script>
+        function gtag_report_conversion(url) {
+            var callback = function() {
+                if (typeof(url) != 'undefined') {
+                    window.location = url;
+                }
+            };
+            gtag('event', 'conversion', {
+                'send_to': 'AW-390977414/-P2lCN-wt4ACEIavt7oB',
+                'value': 100.0,
+                'currency': 'BRL',
+                'event_callback': callback
+            });
+            return false;
+        }
+    </script>
+
+
 </head>
 
 <body>
@@ -118,7 +151,7 @@
                   font-weight: 700; margin-top: 3%; margin-bottom: 3%;   text-shadow: 2px 2px #3c3c3c;
 ">Por favor, verifique se o som está ligado! &#128521;</h5>
 
-                                <button type="button" class="btn btn-success btn-lg btn-zap" style="animation: clickit 12.0s;"><a href="/" style="text-decoration: none; color: white; ">SIM, QUERO AUMENTAR MEU SCORE <br> Liberar meu acesso</a></button>
+                                <button type="button" class="btn btn-success btn-lg btn-zap" onclick="gtag_report_conversion()" style="animation: clickit 12.0s;"><a href="/" style="text-decoration: none; color: white; ">SIM, QUERO AUMENTAR MEU SCORE <br> Liberar meu acesso</a></button>
                                 <br>
 
                             </div>
@@ -382,7 +415,7 @@
                             <br>
                             <p style="color: rgb(0, 0, 0); font-size: x-large; font-weight: bolder;"><span style="color: rgb(50, 150, 0); font-size: xxx-large; font-weight: bolder;"> R$97,00</span></p>
                         </div>
-                        <button type="button" class="btn btn-success btn-lg btn-zap"><a href="/" style="text-decoration: none; color: white; animation: clickit 4.5s">SIM, QUERO AUMENTAR MEU SCORE</a></button>
+                        <button type="button" class="btn btn-success btn-lg btn-zap" onclick="gtag_report_conversion()"><a href="/" style="text-decoration: none; color: white; animation: clickit 4.5s">SIM, QUERO AUMENTAR MEU SCORE</a></button>
                     </div>
                 </div>
             </div>
