Link Eduzz adicionado

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   font-weight: 700; margin-top: 3%; margin-bottom: 3%;   text-shadow: 2px 2px #3c3c3c;
 ">Por favor, verifique se o som está ligado! &#128521;</h5>
 
-                                <button type="button" class="btn btn-success btn-lg btn-zap" onclick="gtag_report_conversion()" style="animation: clickit 12.0s;"><a href="/" style="text-decoration: none; color: white; ">SIM, QUERO AUMENTAR MEU SCORE <br> Liberar meu acesso</a></button>
+                                <button type="button" class="btn btn-success btn-lg btn-zap" onclick="gtag_report_conversion()" style="animation: clickit 12.0s;"><a href="https://p.eduzz.com/807950" style="text-decoration: none; color: white; ">SIM, QUERO AUMENTAR MEU SCORE <br> Liberar meu acesso</a></button>
                                 <br>
 
                             </div>
@@ -415,7 +415,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             <br>
                             <p style="color: rgb(0, 0, 0); font-size: x-large; font-weight: bolder;"><span style="color: rgb(50, 150, 0); font-size: xxx-large; font-weight: bolder;"> R$97,00</span></p>
                         </div>
-                        <button type="button" class="btn btn-success btn-lg btn-zap" onclick="gtag_report_conversion()"><a href="/" style="text-decoration: none; color: white; animation: clickit 4.5s">SIM, QUERO AUMENTAR MEU SCORE</a></button>
+                        <button type="button" class="btn btn-success btn-lg btn-zap" onclick="gtag_report_conversion()"><a href="https://p.eduzz.com/807950" style="text-decoration: none; color: white; animation: clickit 4.5s">SIM, QUERO AUMENTAR MEU SCORE</a></button>
                     </div>
                 </div>
             </div>
