Combo sem AudioBook

--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <img src="./assets/img/combo3.webp" width="486px" heigth="486px" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook">
                     <p>&#11088; <span style="color: #5e0eff; text-shadow: 0.5px 0.5px black;font-weight: bolder;">Planilha Exclusiva</span> </p>
+                    <br>
                     <!-- <img src="./assets/img/Planilha.webp" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook" width="243px" height="250px"> -->
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12 active">
@@ -404,14 +405,15 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$49,00</span></p>
                             <p class="text-precos">Ebook Bônus 3: Como financiar seu carro</p>
                             <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$49,00</span></p>
-                            <p class="text-precos">AudioBook Score dos Sonhos</p>
-                            <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$18,00</span></p>
+                            <!-- <p class="text-precos">AudioBook Score dos Sonhos</p>
+                            <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$18,00</span></p> -->
                             <!-- <p class="text-precos">Planilha Score 900</p>
                 <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$22,00</span></p>
                 <br> -->
                             <br>
                             <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s" style="color: white; font-size: x-large;">TOTAL:</h2>
-                            <p style="color: rgb(0, 0, 0); font-size: x-large; font-weight: bolder;">De <span style="color: red; font-size: xx-large; font-weight: bolder;text-decoration: line-through"> R$462,00</span></p>
+                            <!-- <p style="color: rgb(0, 0, 0); font-size: x-large; font-weight: bolder;">De <span style="color: red; font-size: xx-large; font-weight: bolder;text-decoration: line-through"> R$462,00</span></p> -->
+                            <p style="color: rgb(0, 0, 0); font-size: x-large; font-weight: bolder;">De <span style="color: red; font-size: xx-large; font-weight: bolder;text-decoration: line-through"> R$444,00</span></p>
                             <br>
                             <p style="color: rgb(0, 0, 0); font-size: x-large; font-weight: bolder;"><span style="color: rgb(50, 150, 0); font-size: xxx-large; font-weight: bolder;"> R$97,00</span></p>
                         </div>
